--- a/app/caries.html
+++ b/app/caries.html
@@ -84,13 +84,24 @@
                         <li class="menu__item">
                             <a href="reviews.html" class="menu__link">Отзывы</a>
                         </li>
+                        <div class="phone modile-phone">
+                            <img src="./img/phone-icon.svg">
+                            <a href="tel:+7 (925) 741-10-25" class="phone__item">+7 (925) 741-10-25</a>
+                            <a href="tel:+7 (499) 142-17-01" class="phone__item">+7 (499) 142-17-01</a>
+                        </div>
                     </ul>
+                    <div class="menu__bg"></div>
                 </div>
                 <div class="col-lg-2">
                     <div class="phone">
                         <img src="./img/phone-icon.svg">
                         <a href="tel:+7 (925) 741-10-25" class="phone__item">+7 (925) 741-10-25</a>
                         <a href="tel:+7 (499) 142-17-01" class="phone__item">+7 (499) 142-17-01</a>
+                    </div>
+                    <div class="btn_mnu">
+                        <div class="btn_row"></div>
+                        <div class="btn_row"></div>
+                        <div class="btn_row"></div>
                     </div>
                 </div>
             </div>
@@ -99,14 +110,14 @@
     <section >
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-5">
+                <div class="col-lg-5 col-12">
                     <div class="content  wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Услуги</div>
                         <div class="title">Лечение кариеса зубов</div>
                         <p class="content__desc">Суть лечения кариеса сводится к иссечению и удалению пораженных кариесом твердых тканей зубов с последующим их пломбированием.</p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-lg-7 col-12">
                     <div class="img-arround  wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/caries-1.jpg" class="img-responsive">
                     </div>
@@ -117,12 +128,12 @@
     <section>
         <div class="container">
             <div class="row align-items-center">
-                <div class="col">
+                <div class="col-lg-7 col-12 order-lg-1 order-2">
                     <div class="wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/caries-2.jpg" class="img-responsive">
                     </div>
                 </div>
-                <div class="col-5">
+                <div class="col-lg-5 col-12 order-lg-2 order-1">
                     <div class="content wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <p class="content__desc">
                             Суть лечения кариеса сводится к иссечению и удалению пораженных кариесом твердых тканей зубов с последующим их пломбированием. Задача доктора заключается в обезболивании, правильном препарировании тканей зуба и последующем наполнении образовавшейся полости композитным материалом. 
@@ -138,7 +149,7 @@
     <section>
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-5">
+                <div class="col-lg-5 col-12">
                     <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <p class="content__desc">
                             Обработка кариозной полости без адекватного охлаждения водно-воздушным спреем из наконечника может привести к микроожогам пульпы зуба (нерв), что может привести к асептическому воспалению пульпы. Довольно часто после пломбирования глубокой кариозной полости возникают ощущения при накусывании и кратковременная боль на холод.
@@ -148,7 +159,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-lg-7 col-12">
                     <div class="img-row-botom wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/caries-3.jpg" class="img-responsive">
                     </div>
@@ -159,12 +170,12 @@
     <section>
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col-lg-7 col-12 order-lg-1 order-2">
                     <div class="img-top wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/caries-4.jpg" class="img-responsive">
                     </div>
                 </div>
-                <div class="col-5">
+                <div class="col-lg-5 col-12 order-lg-2 order-1">
                     <div class="content wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Глубокий кариес</div>
                         <div class="title">Estelite, <br /> Filtek-Ultimaate, Charisma</div>
@@ -231,9 +242,6 @@
                 </div>
                 <div class="col-6">
                     <ul class="footer-menu">
-                        <li class="footer-menu__item">
-                            <a href="#" class="footer-menu__link active">Услуги</a>
-                        </li>
                         <li class="footer-menu__item">
                             <a href="works.html" class="footer-menu__link">Работы</a>
                         </li>
