--- a/app/index.html
+++ b/app/index.html
@@ -297,7 +297,7 @@
         <section class="veneers-section">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-5">
+                    <div class="col-lg-5 col-12">
                         <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                             <div class="sub-title">CAD/CAM Cerec 3</div>
                             <div class="title">Виниры, коронки <br /> E-Max за 3 часа</div>
@@ -305,7 +305,7 @@
                             <a href="metal-ceramics.html" class="btn">Подробнее</a>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-lg-7 col-11">
                         <div class="img-row wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                             <img src="./img/veneer.png" class="img-responsive">
                         </div>
@@ -571,10 +571,10 @@
             <div class="partners">
                 <div class="container">
                     <div class="row align-items-center">
-                        <div class="col-3">
+                        <div class="col-md-3 col-12">
                             <div class="title">Партнёры:</div>
                         </div>
-                        <div class="col-8">
+                        <div class="col-md-8 col-12">
                             <div class="partners__row">
                                 <a href="http://kava-med.ru/" target="_blank">
                                     <img src="./img/partner-1.svg" alt="" class="img-responsive">
@@ -642,9 +642,6 @@
                     </div>
                     <div class="col-6">
                         <ul class="footer-menu">
-                            <li class="footer-menu__item">
-                                <a href="#" class="footer-menu__link active">Услуги</a>
-                            </li>
                             <li class="footer-menu__item">
                                 <a href="works.html" class="footer-menu__link">Работы</a>
                             </li>
