--- a/app/works.html
+++ b/app/works.html
@@ -85,13 +85,24 @@
                             <li class="menu__item">
                                 <a href="reviews.html" class="menu__link">Отзывы</a>
                             </li>
+                            <div class="phone modile-phone">
+                                <img src="./img/phone-icon.svg">
+                                <a href="tel:+7 (925) 741-10-25" class="phone__item">+7 (925) 741-10-25</a>
+                                <a href="tel:+7 (499) 142-17-01" class="phone__item">+7 (499) 142-17-01</a>
+                            </div>
                         </ul>
+                        <div class="menu__bg"></div>
                     </div>
                     <div class="col-lg-2">
                         <div class="phone">
                             <img src="./img/phone-icon.svg">
                             <a href="tel:+7 (925) 741-10-25" class="phone__item">+7 (925) 741-10-25</a>
                             <a href="tel:+7 (499) 142-17-01" class="phone__item">+7 (499) 142-17-01</a>
+                        </div>
+                        <div class="btn_mnu">
+                            <div class="btn_row"></div>
+                            <div class="btn_row"></div>
+                            <div class="btn_row"></div>
                         </div>
                     </div>
                 </div>
@@ -318,9 +329,6 @@
                 </div>
                 <div class="col-6">
                     <ul class="footer-menu">
-                        <li class="footer-menu__item">
-                            <a href="#" class="footer-menu__link active">Услуги</a>
-                        </li>
                         <li class="footer-menu__item">
                             <a href="works.html" class="footer-menu__link">Работы</a>
                         </li>
