--- a/app/implants.html
+++ b/app/implants.html
@@ -84,7 +84,13 @@
                         <li class="menu__item">
                             <a href="reviews.html" class="menu__link">Отзывы</a>
                         </li>
+                        <div class="phone modile-phone">
+                            <img src="./img/phone-icon.svg">
+                            <a href="tel:+7 (925) 741-10-25" class="phone__item">+7 (925) 741-10-25</a>
+                            <a href="tel:+7 (499) 142-17-01" class="phone__item">+7 (499) 142-17-01</a>
+                        </div>
                     </ul>
+                    <div class="menu__bg"></div>
                 </div>
                 <div class="col-lg-2">
                     <div class="phone">
@@ -92,21 +98,26 @@
                         <a href="tel:+7 (925) 741-10-25" class="phone__item">+7 (925) 741-10-25</a>
                         <a href="tel:+7 (499) 142-17-01" class="phone__item">+7 (499) 142-17-01</a>
                     </div>
+                    <div class="btn_mnu">
+                        <div class="btn_row"></div>
+                        <div class="btn_row"></div>
+                        <div class="btn_row"></div>
+                    </div>
                 </div>
             </div>
         </div>
     </header>
-    <section >
+    <section>
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-5">
+                <div class="col-lg-5 col-12">
                     <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Услуги</div>
                         <div class="title">Имплантация</div>
                         <p class="content__desc">Имплантация – это операция по вживлению импланта на верхней или нижней челюсти пациента. Имплант представляет собой сложную винтовую конструкцию с наружной и внутренней резьбой. </p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-lg-7 col-12">
                     <div class="img-arround wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/implants.jpg" class="img-responsive">
                     </div>
@@ -117,12 +128,12 @@
     <section>
         <div class="container">
             <div class="row align-items-center">
-                <div class="col">
+                <div class="col-lg-7 col-12 order-lg-1 order-2">
                     <div class="wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/implants-1.png" class="img-responsive">
                     </div>
                 </div>
-                <div class="col-5">
+                <div class="col-lg-5 col-12 order-lg-2 order-1">
                     <div class="content  wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <p class="content__desc">
                             Наружная резьба импланта играет важную роль при оссеоинтеграции импланта. Внутренняя резьба служит для крепления аббатмента. Если сам имплант находится под десной в кости, то аббатмент является той частью, которая возвышается над десной. К нему уже крепятся коронки с помощью винтов или цементов. Более 60 лет назад шведский ученый Бранемарк перевернул весь мир, выявив свойство титана срастаться с костью. 
@@ -138,7 +149,7 @@
     <section>
         <div class="container">
             <div class="row">
-                <div class="col-5">
+                <div class="col-lg-5 col-12">
                     <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Системы имплантации</div>
                         <div class="title">ASTRA-TECH и ALPHA-BIO</div>
@@ -148,7 +159,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-lg-7 col-12">
                     <div class="img-row-botom wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/implant-2.jpg" class="img-responsive">
                     </div>
@@ -159,12 +170,12 @@
     <section>
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col-lg-7 col-12 order-lg-1 order-2">
                     <div class="img-center  wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/implant-3.jpg" class="img-responsive">
                     </div>
                 </div>
-                <div class="col-5">
+                <div class="col-lg-5 col-12 order-lg-2 order-1">
                     <div class="content wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Системы имплантации</div>
                         <div class="title">VarioSurg NSK</div>
@@ -237,9 +248,6 @@
                 </div>
                 <div class="col-6">
                     <ul class="footer-menu">
-                        <li class="footer-menu__item">
-                            <a href="#" class="footer-menu__link active">Услуги</a>
-                        </li>
                         <li class="footer-menu__item">
                             <a href="works.html" class="footer-menu__link">Работы</a>
                         </li>
