--- a/app/kozhukhova-arina.html
+++ b/app/kozhukhova-arina.html
@@ -84,13 +84,24 @@
                         <li class="menu__item">
                             <a href="reviews.html" class="menu__link">Отзывы</a>
                         </li>
+                        <div class="phone modile-phone">
+                            <img src="./img/phone-icon.svg">
+                            <a href="tel:+7 (925) 741-10-25" class="phone__item">+7 (925) 741-10-25</a>
+                            <a href="tel:+7 (499) 142-17-01" class="phone__item">+7 (499) 142-17-01</a>
+                        </div>
                     </ul>
+                    <div class="menu__bg"></div>
                 </div>
                 <div class="col-lg-2">
                     <div class="phone">
                         <img src="./img/phone-icon.svg">
                         <a href="tel:+7 (925) 741-10-25" class="phone__item">+7 (925) 741-10-25</a>
                         <a href="tel:+7 (499) 142-17-01" class="phone__item">+7 (499) 142-17-01</a>
+                    </div>
+                    <div class="btn_mnu">
+                        <div class="btn_row"></div>
+                        <div class="btn_row"></div>
+                        <div class="btn_row"></div>
                     </div>
                 </div>
             </div>
@@ -99,7 +110,7 @@
     <section >
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-5">
+                <div class="col-lg-5 col-12">
                     <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Врач-стоматолог первой категории</div>
                         <div class="title">Кожухова Арина Петровна</div>
@@ -122,7 +133,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-lg-7 col-12">
                     <div class="img-arround wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/arina-1.jpg" class="img-responsive">
                     </div>
@@ -133,12 +144,12 @@
     <section>
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col-lg-7 col-12 order-lg-1 order-2">
                     <div class="wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/arina-2.jpg" class="img-responsive">
                     </div>
                 </div>
-                <div class="col-5">
+                <div class="col-lg-5 col-12 order-lg-2 order-1">
                     <div class="content wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">  
                         <strong class="content__strong">Образование:</strong>
                         <ul class="content__row">
@@ -272,9 +283,6 @@
                 </div>
                 <div class="col-6">
                     <ul class="footer-menu">
-                        <li class="footer-menu__item">
-                            <a href="#" class="footer-menu__link active">Услуги</a>
-                        </li>
                         <li class="footer-menu__item">
                             <a href="works.html" class="footer-menu__link">Работы</a>
                         </li>
