--- a/app/metal-ceramics.html
+++ b/app/metal-ceramics.html
@@ -84,7 +84,13 @@
                         <li class="menu__item">
                             <a href="reviews.html" class="menu__link">Отзывы</a>
                         </li>
+                        <div class="phone modile-phone">
+                            <img src="./img/phone-icon.svg">
+                            <a href="tel:+7 (925) 741-10-25" class="phone__item">+7 (925) 741-10-25</a>
+                            <a href="tel:+7 (499) 142-17-01" class="phone__item">+7 (499) 142-17-01</a>
+                        </div>
                     </ul>
+                    <div class="menu__bg"></div>
                 </div>
                 <div class="col-lg-2">
                     <div class="phone">
@@ -92,21 +98,26 @@
                         <a href="tel:+7 (925) 741-10-25" class="phone__item">+7 (925) 741-10-25</a>
                         <a href="tel:+7 (499) 142-17-01" class="phone__item">+7 (499) 142-17-01</a>
                     </div>
+                    <div class="btn_mnu">
+                        <div class="btn_row"></div>
+                        <div class="btn_row"></div>
+                        <div class="btn_row"></div>
+                    </div>
                 </div>
             </div>
         </div>
     </header>
-    <section >
+    <section>
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-5">
+                <div class="col-lg-5 col-12">
                     <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Услуги</div>
                         <div class="title">Металлокерамика, безметалловая керамика</div>
                         <p class="content__desc">Протезирование металлокерамическими коронками сегодня наиболее часто применяемый метод в ортопедической стоматологии. </p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-lg-7 col-12">
                     <div class="img-arround wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/ceramics-1.jpg" class="img-responsive">
                     </div>
@@ -117,12 +128,12 @@
     <section class="bottom-section">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col">
+                <div class="col-lg-7 col-12 order-lg-1 order-2">
                     <div class="wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/ceramics-2.jpg" class="img-responsive">
                     </div>
                 </div>
-                <div class="col-5">
+                <div class="col-lg-5 col-12 order-lg-2 order-1">
                     <div class="content wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <p class="content__desc">
                             Скажем для начала, что в нашей клинике «ЕВВА-ДЕНТ» препарирование зубов производится с круговым уступом в 99,9% случаев. 
@@ -151,7 +162,7 @@
     <section class="bottom-section">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-5">
+                <div class="col-lg-5 col-12">
                     <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Металлокерамика с литым металлическим каркасом из КХС</div>
                         <p class="content__desc">
@@ -162,7 +173,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-lg-7 col-12">
                     <div class="img-row-right wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/ceramics-3.jpg" class="img-responsive">
                     </div>
@@ -173,12 +184,12 @@
     <section class="bottom-section">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col">
+                <div class="col-lg-7 col-12 order-lg-1 order-2">
                     <div class="wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/ceramics-4.jpg" class="img-responsive">
                     </div>
                 </div>
-                <div class="col-5">
+                <div class="col-lg-5 col-12 order-lg-2 order-1">
                     <div class="content wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Металлокерамика с фрезерованным каркасом из КХС.</div>
                         <p class="content__desc">
@@ -195,7 +206,7 @@
     <section class="bottom-section">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-5">
+                <div class="col-lg-5 col-12">
                     <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Безметалловая керамика с циркониевым каркасом</div>
                         <p class="content__desc">
@@ -212,7 +223,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-lg-7 col-12">
                     <div class="img-row-right wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/ceramics-5.jpg" class="img-responsive">
                     </div>
@@ -223,12 +234,12 @@
     <section class="bottom-section">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col">
+                <div class="col-lg-7 col-12 order-lg-1 order-2">
                     <div class="wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/ceramics-6.jpg" class="img-responsive">
                     </div>
                 </div>
-                <div class="col-5">
+                <div class="col-lg-5 col-12 order-lg-2 order-1">
                     <div class="content wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Безметалловые цельнокерамические коронки</div>
                         <p class="content__desc">
@@ -248,7 +259,7 @@
     <section class="bottom-section">
         <div class="container">
             <div class="row">
-                <div class="col-5">
+                <div class="col-lg-5 col-12">
                     <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Безметалловые цельнокерамические конструкции</div>
                         <p class="content__desc">
@@ -260,7 +271,7 @@
                         <button data-fancybox="dialog" data-src="#sign-up" class="btn">Записаться</button>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-lg-7 col-12">
                     <div class="img-row-right wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/ceramics-7.jpg" class="img-responsive">
                     </div>
@@ -322,9 +333,6 @@
                 </div>
                 <div class="col-6">
                     <ul class="footer-menu">
-                        <li class="footer-menu__item">
-                            <a href="#" class="footer-menu__link active">Услуги</a>
-                        </li>
                         <li class="footer-menu__item">
                             <a href="works.html" class="footer-menu__link">Работы</a>
                         </li>
