--- a/app/security.html
+++ b/app/security.html
@@ -84,13 +84,24 @@
                         <li class="menu__item">
                             <a href="reviews.html" class="menu__link">Отзывы</a>
                         </li>
+                        <div class="phone modile-phone">
+                            <img src="./img/phone-icon.svg">
+                            <a href="tel:+7 (925) 741-10-25" class="phone__item">+7 (925) 741-10-25</a>
+                            <a href="tel:+7 (499) 142-17-01" class="phone__item">+7 (499) 142-17-01</a>
+                        </div>
                     </ul>
+                    <div class="menu__bg"></div>
                 </div>
                 <div class="col-lg-2">
                     <div class="phone">
                         <img src="./img/phone-icon.svg">
                         <a href="tel:+7 (925) 741-10-25" class="phone__item">+7 (925) 741-10-25</a>
                         <a href="tel:+7 (499) 142-17-01" class="phone__item">+7 (499) 142-17-01</a>
+                    </div>
+                    <div class="btn_mnu">
+                        <div class="btn_row"></div>
+                        <div class="btn_row"></div>
+                        <div class="btn_row"></div>
                     </div>
                 </div>
             </div>
@@ -99,13 +110,13 @@
     <section >
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-5">
+                <div class="col-lg-5 col-12">
                     <div class="content">
                         <div class="title">Безопасность пациента наш девиз</div>
                         <p class="content__desc">В нашей клинике применяются анестетики производства фирм: «3М-ESPE» (убистезин), «SEPTODONT» (септанест), «AVENTIS» (ультракаин).</p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-lg-7 col-12">
                     <div class="img-arround">
                         <img src="./img/security.jpg" class="img-responsive">
                     </div>
@@ -134,12 +145,12 @@
     <section>
         <div class="container">
             <div class="row align-items-center">
-                <div class="col">
+                <div class="col-lg-7 col-12 order-lg-1 order-2">
                     <div class="wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/security-2.jpg" class="img-responsive">
                     </div>
                 </div>
-                <div class="col-5">
+                <div class="col-lg-5 col-12 order-lg-2 order-1">
                     <div class="content wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Техника</div>
                         <div class="title">
@@ -159,7 +170,7 @@
     <section class="bottom-section">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-5">
+                <div class="col-lg-5 col-12">
                     <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Техника</div>
                         <div class="title">3М-ESPE</div>
@@ -180,7 +191,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-lg-7 col-12">
                     <div class="img-row-right wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/security-3.jpg" class="img-responsive">
                     </div>
@@ -201,12 +212,12 @@
     <section class="dentaport-section">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col">
+                <div class="col-lg-7 col-12 order-lg-1 order-2">
                     <div class="wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/security-4.jpg" class="img-responsive">
                     </div>
                 </div>
-                <div class="col-5">
+                <div class="col-lg-5 col-12 order-lg-2 order-1">
                     <div class="content wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Техника</div>
                         <div class="title">
@@ -226,7 +237,7 @@
     <section class="helodent-section">
         <div class="container">
             <div class="row justify-content-end align-items-center">
-                <div class="col-5">
+                <div class="col-lg-5 col-12">
                     <div class="content">
                         <div class="sub-title wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">Техника</div>
                         <div class="title wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.7s">HELIODENT PLUS</div>
@@ -244,7 +255,7 @@
     <section class="ultrasonic-section">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-5">
+                <div class="col-lg-5 col-12">
                     <div class="content wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="sub-title">Техника</div>
                         <div class="title">
@@ -258,7 +269,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-lg-7 col-12">
                     <div class="img-row-right wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <img src="./img/security-6.jpg" class="img-responsive">
                     </div>
@@ -320,9 +331,6 @@
                 </div>
                 <div class="col-6">
                     <ul class="footer-menu">
-                        <li class="footer-menu__item">
-                            <a href="#" class="footer-menu__link active">Услуги</a>
-                        </li>
                         <li class="footer-menu__item">
                             <a href="works.html" class="footer-menu__link">Работы</a>
                         </li>
