--- a/app/index.html
+++ b/app/index.html
@@ -307,7 +307,11 @@
                     </div>
                     <div class="col-lg-7 col-11">
                         <div class="img-row wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
-                            <img src="./img/veneer.png" class="img-responsive">
+                            <!-- <img src="./img/veneer.png" class="img-responsive"> -->
+                            <video controls class="veneers-video">
+                                <source src="./video/video.mp4" type="video/mp4">
+                                Your browser does not support HTML video.
+                            </video>
                         </div>
                     </div>
                 </div>
@@ -528,6 +532,15 @@
                                             Стаж работы с 2000 года. Стажировалась в Германии, применяет самые передовые технологии при лечении каналов зубов.
                                         </div>
                                         <a href="kozhukhova-arina.html" class="btn">Подробнее</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="person wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
+                                    <img src="./img/person-4.png" class="img-responsive person__img">
+                                    <div class="person__content">
+                                        <div class="person__name">Абдуразвкова Азиза</div>
+                                        <div class="person__label">Врач-стоматолог терапевт, <br /> гигиенист</div>
                                     </div>
                                 </div>
                             </div>
