--- a/app/staff.html
+++ b/app/staff.html
@@ -14,8 +14,8 @@
 	
 	<!-- Template Basic Images Start -->
 	<meta property="og:image" content="path/to/image.jpg">
-	<link rel="icon" href="img/favicon/favicon.ico">
-	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
+	<link rel="icon" href="img/favicon/favicon.png">
+	<link rel="apple-touch-icon" href="img/favicon/favicon.png">
 	<!-- Template Basic Images End -->
 	
 	<!-- Custom Browsers Color Start -->
@@ -188,6 +188,15 @@
                 </div>
                 <div class="staff__item">
                     <div class="person wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
+                        <img src="./img/person-7.jpg" class="img-responsive person__img">
+                        <div class="person__content auto">
+                            <div class="person__name">Бояджян Ваган</div>
+                            <div class="person__label">Ассистент врача стоматолога</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="staff__item">
+                    <div class="person wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
                         <img src="./img/person-6.jpg" class="img-responsive person__img">
                         <div class="person__content auto">
                             <div class="person__name">Чернышева Ксения</div>
@@ -195,6 +204,16 @@
                         </div>
                     </div>
                 </div>
+                <div class="staff__item">
+                    <div class="person wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
+                        <img src="./img/person-8.jpg" class="img-responsive person__img">
+                        <div class="person__content auto">
+                            <div class="person__name">Бейко Анна</div>
+                            <div class="person__label">Администратор</div>
+                        </div>
+                    </div>
+                </div>
+                <div style="max-width: 330px; width: 100%;"></div>
             </div>
         </div>
     </section>
