--- a/app/index.html
+++ b/app/index.html
@@ -157,7 +157,7 @@
                                 </div>
                             </div>
                             <div class="sign-up__row">
-                                <button data-fancybox="dialog" data-src="#sign-up" class="btn">Записаться</button>
+                                <button data-fancybox="dialog2" data-src="#sign-up" class="btn">Записаться</button>
                                 <a href="works.html" class="btn btn-outline">Работы</a>
                             </div>
                             <div class="doctor">
